--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DCC202 - Atividade 12: Laís Santos Tomaz</title>
+    <script src="main.js" type="module"></script>
 </head>
 <body>
-    
+    <main>
+        <h1>DCC202 - Atividade 12: Laís Santos Tomaz</h1>
+        <p>Esta é a página principal que usa JavaScript para adicionar iteração.</p>
+    </main>
 </body>
 </html>
