adiciona form no index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <main>
         <h1>DCC202 - Atividade 12: Laís Santos Tomaz</h1>
         <p>Esta é a página principal que usa JavaScript para adicionar iteração.</p>
+        <section>
+            <form action="" name="entrada"></form>
+        </section>
     </main>
 </body>
 </html>
