adiciona botão para limpar lista no index.html

--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
             value="1"
           />
           <button type="submit">Enviar</button>
+          <button type="button" id="limpar">Limpar</button>
         </form>
       </section>
+
       <section id="saida">
         <h2>João</h2>
         <ol id="joao"></ol>
